--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
 
         <div class="header__wrapper">
           <ul class="list__items">
-            <li class="list__item"><a class="link" href="about.html">ABOUT AS</a></li>
+            <li class="list__item"><a class="link" href="index.html">ABOUT AS</a></li>
             <li class="list__item"><a class="link" href="products.html">PRODUCTS</a></li>
             <li class="list__item"><a class="link active__link" href="contacts.html">CONTACTS</a></li>
           </ul>
