--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
     <div class="container__main">
       <div class="header__container container">
         <a href="#" class="header__logo">
-          <img class="header__img" src="/img/logo.png" alt="logo">
+          <img class="header__img" src="img/logo.png" alt="logo">
         </a>
         <div class="burger">
           <button class="open-menu">
@@ -61,7 +61,7 @@
             </p>
             <p class="contact__info">
               <span class="contact__deteils">Phone number</span>
-              <span class="contact__name">+371 67815842, <br>
+              <span class="contact__name">+371 67815842,<br>
                 +371 67815843</span>
             </p>
           </div>
