--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container__main">
       <div class="header__container container">
         <a href="#" class="header__logo">
-          <img class="header__img" src="/img/logo.png" alt="logo">
+          <img class="header__img" src="img/logo.png" alt="logo">
         </a>
         <div class="burger">
           <button class="open-menu">
