--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <div class="container__main img-wrapper">
-      <img class="main-img" src="img/main-img.png" alt="">
+      <img class="main-img" src="img/main-img.png" alt="main-img">
     </div>
     <div class="container">
       <h1 class="main__title">ABOUT US</h1>
