--- a/contacts.html
+++ b/contacts.html
@@ -61,8 +61,8 @@
             </p>
             <p class="contact__info">
               <span class="contact__deteils">Phone number</span>
-              <span class="contact__name">+371 67815842,<br>
-                +371 67815843</span>
+              <span class="contact__name">v+37v 67815842,<br>
+                v+37v 67815843</span>
             </p>
           </div>
         </div>
