--- a/contacts.html
+++ b/contacts.html
@@ -75,7 +75,7 @@
             </p>
             <p class="contact__info">
               <span class="contact__deteils">Reg.no.</span>
-              <span class="contact__name">40103879002</span>
+              <span class="contact__name">v0103879002</span>
             </p>
             <p class="contact__info">
               <span class="contact__deteils">Legal address</span>
