--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <main>
     <div class="container__main img-wrapper">
-      <img class="main-img" src="img/main-img.png" srcset="img/main-x2.webp 2x" alt="main-img">
+      <img class="main-img" src="img/main-img.webp" srcset="img/main-x2.webp 2x" alt="main-img">
     </div>
     <div class="container">
       <h1 class="main__title">ABOUT US</h1>
@@ -206,7 +206,7 @@
           Specialized Services:</p>
       </div>
       <div class="trade__img-wrap">
-        <img class="trade__img" src="img/trade-img.png" alt="img">
+        <img class="main-img" src="img/trade.webp" srcset="img/trade-2x.webp 2x" alt="trade-img">
       </div>
     </div>
   </section>
@@ -334,13 +334,13 @@
       <div class="connect__wrapper">
         <div class="connect__person">
           <div class="connect__img">
-            <img src="img/connect-person.png" alt="person">
+            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
           </div>
           <div class="connect__info">
             <a class="connect__link" href="#">
               <span class="connect__link-txt">connect</span>
               <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="">
+                <img src="img/connect-arrow.svg" alt="arrow">
               </span>
             </a>
             <p class="connect__txt">
@@ -352,13 +352,13 @@
 
         <div class="connect__person">
           <div class="connect__img">
-            <img src="img/connect-person.png" alt="person">
+            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
           </div>
           <div class="connect__info">
             <a class="connect__link" href="#">
               <span class="connect__link-txt">connect</span>
               <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="">
+                <img src="img/connect-arrow.svg" alt="arrow">
               </span>
             </a>
             <p class="connect__txt">
@@ -370,13 +370,13 @@
 
         <div class="connect__person">
           <div class="connect__img">
-            <img src="img/connect-person.png" alt="person">
+            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
           </div>
           <div class="connect__info">
             <a class="connect__link" href="#">
               <span class="connect__link-txt">connect</span>
               <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="">
+                <img src="img/connect-arrow.svg" alt="arrow">
               </span>
             </a>
             <p class="connect__txt">
