--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">1</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/1.png" alt="img">
           <p>Research and development:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -88,7 +88,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">2</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/2.png" alt="img">
           <p>European and international wholesale:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -109,7 +109,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">3</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/3.png" alt="img">
           <p>E-commerce players:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -135,7 +135,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">1</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/4.png" alt="img">
           <p>Branded and Generic Medicines:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -156,7 +156,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">2</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/5.png" alt="img">
           <p>Medical Goods and Dental Products:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -177,7 +177,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">3</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/6.png" alt="img">
           <p>Food Supplements and Cosmetics:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -206,7 +206,7 @@
           Specialized Services:</p>
       </div>
       <div class="trade__img-wrap">
-        <img class="main-img" src="img/trade.webp" srcset="img/trade-2x.webp 2x" alt="trade-img">
+        <img class="trade__img" src="img/trade.png" srcset="img/trade-2x.png 2x" alt="trade-img">
       </div>
     </div>
   </section>
@@ -219,7 +219,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">1</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/7.png" alt="img">
           <p>Shortage Supplies:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -240,7 +240,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">2</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/8.png" alt="img">
           <p>Clinical Trial Supplies:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -266,7 +266,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">1</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/9.png" alt="img">
           <p>Quality Assurance:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -287,7 +287,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">2</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/10.png" alt="img">
           <p>Reliability:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -308,7 +308,7 @@
       <div class="container accordion__container">
         <span class="accordion__number">3</span>
         <div class="accord__wrapper">
-          <img class="accordion__img" src="img/accord-img.png" alt="img">
+          <img class="accordion__img" src="img/11.png" alt="img">
           <p>Global Network:</p>
         </div>
         <span class="accordion__img-wrap">
@@ -323,69 +323,6 @@
         cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
         Tempore explicabo quasi velit.
       </p>
-    </div>
-  </section>
-
-  <section class="connect">
-    <div class="container">
-      <h2 class="connect__title">CONNECT WITH US:</h2>
-    </div>
-    <div class="container__connect">
-      <div class="connect__wrapper">
-        <div class="connect__person">
-          <div class="connect__img">
-            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
-          </div>
-          <div class="connect__info">
-            <a class="connect__link" href="#">
-              <span class="connect__link-txt">connect</span>
-              <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="arrow">
-              </span>
-            </a>
-            <p class="connect__txt">
-              <span class="connect__position">Commercial director:</span>
-              <span class="coonect__name">Viktorija Klujeva</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="connect__person">
-          <div class="connect__img">
-            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
-          </div>
-          <div class="connect__info">
-            <a class="connect__link" href="#">
-              <span class="connect__link-txt">connect</span>
-              <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="arrow">
-              </span>
-            </a>
-            <p class="connect__txt">
-              <span class="connect__position">Commercial director:</span>
-              <span class="coonect__name">Viktorija Klujeva</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="connect__person">
-          <div class="connect__img">
-            <img class="main-img" src="img/person.webp" srcset="img/person-2x.webp 2x" alt="person">
-          </div>
-          <div class="connect__info">
-            <a class="connect__link" href="#">
-              <span class="connect__link-txt">connect</span>
-              <span class="connect__img-wrap">
-                <img src="img/connect-arrow.svg" alt="arrow">
-              </span>
-            </a>
-            <p class="connect__txt">
-              <span class="connect__position">Commercial director:</span>
-              <span class="coonect__name">Viktorija Klujeva</span>
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
