--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Pharmamax provides clinical trial supply services for CRO, CDMO, innovator and generic pharmaceutical companies.
       </p>
     </div>
 
@@ -98,10 +95,9 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepe placeat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at,
-        sequicumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Pharmamax offers a broad choice of brand and generic medicines, medical and dental goods at competitive prices
+        for wholesalers in Europe and internationally. Benefit from our supplies to cover your regular demand and in
+        case of shortage.
       </p>
     </div>
 
@@ -119,10 +115,8 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Pharmamax closely follows the promo prices in the domestic region to offer monthly branded goods at reduced
+        prices for e-commerce players with their own webshops and marketplaces around the globe.
       </p>
     </div>
   </section>
@@ -145,10 +139,9 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        We offer a comprehensive portfolio of both branded and generic medicines sourced from internationally
+        recognizable manufacturers. Our commitment to time and competitive pricing ensures that our clients receive
+        pharmaceutical products that cover their demand in any market globally.
       </p>
     </div>
 
@@ -166,10 +159,9 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepe placeat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at,
-        sequicumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Pharmamax is your one-stop destination for a wide array of medical goods and dental products. From essential
+        medical supplies to cutting-edge dental equipment and instruments, we cater to the diverse needs of healthcare
+        professionals, clinics and hospitals.
       </p>
     </div>
 
@@ -187,10 +179,7 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Elevate your consumer health offerings with our selection of A class brand food supplements and cosmetics.
       </p>
     </div>
   </section>
@@ -198,12 +187,12 @@
   <section class="trade">
     <div class="container trade__container">
       <div class="trade__info">
-        <h2 class="trade__title">INTERNATIONAL TRADE FOCU:</h2>
+        <h2 class="trade__title">INTERNATIONAL TRADE FOCUS:</h2>
         <p class="trade__txt">
           With a favourable location in Europe, Latvia, Pharmamax serves as a gateway to timely and
           price competitive supplies. Our global reach allows us to connect with partners worldwide, facilitating
           seamless trade and fostering long-term collaborations.
-          Specialized Services:</p>
+        </p>
       </div>
       <div class="trade__img-wrap">
         <img class="trade__img" src="img/trade.png" srcset="img/trade-2x.png 2x" alt="trade-img">
@@ -229,10 +218,9 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Navigate the challenges of the pharmaceutical landscape with our Shortage Supplies service. We understand the
+        critical nature of shortages and are dedicated to providing swift and reliable solutions to meet your urgent
+        needs.
       </p>
     </div>
 
@@ -250,10 +238,9 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepe placeat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at,
-        sequicumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Pharmamax is your trusted ally in clinical trials. Our specialised services ensure that your clinical research
+        projects receive the necessary pharmaceutical supplies, meeting regulatory standards and timelines. We deliver
+        medicines for CRO, CDMO, innovator and generic companies - both RLD and comparators.
       </p>
     </div>
   </section>
@@ -276,10 +263,8 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        We prioritise the highest standards of quality, ensuring that every product of our supplies is compliant. For
+        ost of our supplies we provide at request COA, CoC, pedigree certificates.
       </p>
     </div>
 
@@ -297,10 +282,8 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepe placeat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at,
-        sequicumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Count on Pharmamax for consistent and timely deliveries, fostering trust and dependability in our partnerships.
+        We have high return rate for the repeating orders from our customers.
       </p>
     </div>
 
@@ -318,10 +301,8 @@
     </button>
     <div class="accordion-content">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates autem reiciendis aut deleniti
-        saepeplaceat aperiam expedita nam? Optio accusamus sit, distinctio esse sapiente beatae aliquid vitae at, sequi
-        cumiste quo incidunt facilis saepe alias laborum velit nobis nam nesciunt quam officiis fugit accusantium!
-        Tempore explicabo quasi velit.
+        Our expansive network enables us to source and supply products worldwide, positioning us as a truly
+        international pharmaceutical wholesaler.
       </p>
     </div>
   </section>
